# ai-research-intelligence

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  ecosystem_radar.yml  eval_weekly.yml  urgent_alerts.yml  weekly_research.yml
configs/: email.example.yml  profile.example.yml  scoring.yml  sources.yml  topics.yml  watchlists.example.yml
data/sample/: eval_gold_items.yml
data/state/: last_run.json  (+4 more)
docs/: ARCHITECTURE.md  CONNECTORS.md  COST_CONTROL.md  DEPLOYMENT.md  PRIVACY.md  RELEASE_NOTES.md  SCORING.md  SPEC.md
scripts/: _automation.py  run_alerts.py  run_ecosystem.py  run_eval.py  run_weekly.py
tests/: conftest.py  factories.py  test_alerts_report.py  test_arxiv_cli.py  test_arxiv_connector.py  test_cache_store.py  test_chinese_presentation.py  test_company_blogs_cli.py  test_company_blogs_connector.py  test_config_loader.py  test_config_validate.py  test_connector_base.py  test_cross_source.py  test_dedupe.py  test_devpost_cli.py  test_devpost_connector.py  test_ecosystem_report.py  test_email_delivery.py  test_entity_extractor.py  test_eval_cli.py  test_eval_metrics.py  test_fake_connector.py  test_fetch_all_cli.py  test_fetch_cli.py  test_fetch_pipeline.py  test_fingerprint.py  test_github_cli.py  test_github_connector.py  test_hackernews_cli.py  test_hackernews_connector.py  test_intelligence_cli.py  test_intelligence_trend_cli.py  test_json_store.py  test_jsonl_store.py  test_models_evidence.py  test_models_extraction.py  test_models_item.py  test_models_raw.py  test_models_report.py  test_models_scores.py  (+25 more)
(+167 files in other folders)
